--- a/style.css
+++ b/style.css
@@ -1,9 +1,32 @@
-body1 {
+body {
 	background-color: #A52A2A;
 }
-titre1 {
+
+#titre1 {
+	text-align: center;
 	color:white;
 }
-p {
 
+IMG.logo {
+	display: block;
+	margin-left: auto;
+    margin-right: auto;
+}
+
+#blocktext {
+	color: white;
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+	margin: 0;
+    background: pink;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%) ;
+}
+
+#fin {
+	color: yellow;
+	background-color: white;
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
