--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 	background-color: #A52A2A;
-	font : 15px/1.5 Arial, Helvetica, sans-serif;
+	font-family:'Quicksand', sans-serif;
 	padding :0;
 	margin:0;
 
@@ -38,7 +38,6 @@ IMG.logo {
 
 #blocktext {
 	color: white;
-	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 	margin: 0;
     background: pink;
     position: absolute;
@@ -51,5 +50,4 @@ IMG.logo {
 #fin {
 	color: yellow;
 	background-color: white;
-	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
