--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 	background-color: #A52A2A;
-	font-family:'Quicksand', sans-serif;
+	font-family:'Quicksand', 'Poppins', sans-serif;
 	padding :0;
 	margin:0;
 
