--- a/style.css
+++ b/style.css
@@ -1,17 +1,16 @@
 body {
 	background-color: #A52A2A;
-	font-family:'Quicksand', sans-serif;
+	font : 15px/1.5 Arial, Helvetica, sans-serif;
 	padding :0;
 	margin:0;
 
 
 }
 /*global */
-.container {
+.box {
 	width:80%;
 	margin:auto;
 	overflow: hidden;
-	color:#ffffff;
 
 }
 
@@ -25,6 +24,34 @@ header {
 	border-bottom:#35424a 3px solid;
 }
 
+header a{
+	color:white;
+	text-decoration:none;
+	font-size:16px; 
+}
+
+header ul{
+	margin:0;
+	padding:0;
+}
+
+header li {
+	float:left;
+	display:inline;
+	padding:0 20px 0 20px;
+}
+
+header #advertising{
+	float:left;
+}
+
+header #branding h1{
+	margin:0;
+}
+
+header nav{
+	float:right;
+}
 #titre1 {
 	text-align: center;
 	color:white;
@@ -38,6 +65,7 @@ IMG.logo {
 
 #blocktext {
 	color: white;
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 	margin: 0;
     background: pink;
     position: absolute;
@@ -50,4 +78,5 @@ IMG.logo {
 #fin {
 	color: yellow;
 	background-color: white;
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
