--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,28 +18,28 @@ IMG.logo {
 	color: white;
 	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 	margin: 0;
-    background: pink;
-    position: absolute;
-    top: 50%;
+	top: 50%;
     left: 50%;
     margin-right: -50%;
-    transform: translate(-50%, -50%) ;
+    transform: translate(-50%, -50%);
+    /*position: absolute;*/ 
 }
 
-#blocktext1 {
+/*#blocktext1 {
 	color: white;
 	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 	margin: 0;
     background: pink;
-    position: absolute;
-    top: 50%;
+    /*position: absolute;*/
+    /*top: 50%;
     left: 50%;
     margin-right: -50%;
-    transform: translate(-50%, -50%) ;
+    transform: translate(-50%, -50%) ;*/
 }
 
 #fin {
-	color: yellow;
-	background-color: white;
+	color: white;
+	background-color: black;
+	opacity: .4;
 	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
