--- a/style.css
+++ b/style.css
@@ -1,9 +1,6 @@
 
-#canvas {
-  display: block;
-  width: 100vw;
-  height: 100vh;
-}
+
+
 
 .menu_top{
 	background-color: #DB0028;
@@ -259,10 +256,74 @@ header a:hover{
 }
 
 footer{
-	padding:20px;
-	margin-top:20px;
+	padding:10px;
+	margin-top:10px;
+	color:#e6e6e6;
+	background-color:#990000;
+}
+
+.footer_2 {
+	padding:10px;
+	margin-top:10px;
 	color:#e6e6e6;
 	background-color:#990000;
 	text-align:center;
+}
+
+
+.btn{
+	display: inline-block;
+	width: 90px;
+	height: 90px;
+	background: #f1f1f1;
+	margin: 10px;
+	border-radius: 30%;
+	box-shadow: 0 5px 15px -5px #00000070;
+	color: #3498db;
+	overflow: hidden;
+	position: relative;
+
+}
+
+.btn i{
+	line-height: 90px;
+	font-size: 26px;
+	transition: 0.2s linear;
+
+}
+
+.btn:hover img{
+	transform: scale(1.3);
+
+}
+
+.btn::before{
+	
+	position: absolute;
+	width: 120%;
+	height:120%;
+	transform: rotate(45deg);
+	left: -110%;
+	top: 90%;
+}
+
+.btn:hover::before{
+	animation: aaa 0.7s 1;
+	top: -10%;
+	left: -10%;
+}
+
+@keyframes aaa{
+0%{
+	left:-110%;
+	top:90%;
+}50%{
+	left:10%;
+	top:30%;
+}100%{
+	top: -10%;
+	left: -10%;
+}
+
 }
 
