--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-
-
-
-
 .menu_top{
 	background-color: #DB0028;
 	overflow: hidden;
@@ -45,7 +41,6 @@
 	background-repeat: no-repeat;
 	background-size:100%;
 }
-
 
 
 
@@ -284,7 +279,7 @@ footer{
 
 }
 
-.btn i{
+.btn img{
 	line-height: 90px;
 	font-size: 26px;
 	transition: 0.2s linear;
