--- a/style.css
+++ b/style.css
@@ -1,33 +1,3 @@
-.menu_top{
-	background-color: #DB0028;
-	overflow: hidden;
-	height:75px;
-	position:fixed;
-	top:0;
-	width:100%;
-}
-
-.menu_top a{
-	float: left;
-	color: #f2f2f2;
-	text-align: center;
-	height:100%;
-	padding: 20px 20px;
-	text-decoration: none;
-	font-size: 20px;
-}
-
-.menu_top a:hover,.button:hover{
-	background-color: white;
-	color: #DB0028;
-}
-
-.menu_top a.active{
-	background-color: #8f001a;
-	border: 0.5px solid #8f001a;
-	color: white;	
-}
-	
 .banniere{
 	font-family: 'Poppins', sans-serif;		
 	font-weight:bold;
@@ -321,3 +291,124 @@ footer{
 
 }
 
+/*CSS for become.html*/
+main{
+	line-height:1.7;
+}
+
+.bckg_img{
+	width: 100%;
+	height: 75%;
+}
+
+.register{
+	padding-bottom:1%;
+	font-size:25px;
+
+}
+.button{
+	background-color: #8f001a;
+	width:50%;
+	border: none;
+	color: white;
+	margin-top:10px;
+	padding: 15px 32px;
+	font-size: 22px;
+	cursor:none;
+}
+.icone{
+	border-radius:50%;
+	width:180px;
+	height:180px;
+	margin-left:45%;
+	margin-top:7%;
+}
+
+#register_overlay{
+	height: 0%;
+	width: 100%;
+	position:fixed;
+	z-index: 1; 
+	left: 0;
+	bottom: 0;
+	overflow-x:hidden;
+	transition: 0.4s;
+	background: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255, 0.8) ), url('img/uo_campus.png');
+	background-position:center;
+	background-repeat: no-repeat;
+	background-size:cover;
+	
+}
+#register_overlay #closebtn {
+	position: absolute;
+	top: 20px;
+	right: 45px;
+	font-size: 60px;
+	margin: 6% 5%;
+	text-decoration: none;
+	color: #818181;
+	display: block;
+	transition: 0.4s;
+}
+.register_overlay-content{
+	position:relative;
+	padding-left:5%;
+	font-size:20px;
+	margin-top:2.5%;
+	text-align:center;
+}
+input{
+	border-style:groove;
+	border-left-color:#8f001a;
+	border-bottom:4px solid #8f001a;
+	height:40px;
+	width:320px;
+	font-size:17px;
+	font-weight:bold;
+	padding-left:20px;
+	border-radius:4px;
+}
+
+/*CSS for services.html*/
+#title{
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: auto;
+}
+ 
+.row {
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  -ms-flex-wrap: wrap; /* IE10 */
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+.column {
+  -ms-flex: 33%; /* IE10 */
+  flex: 33%;
+  max-width: 100%;
+  padding: 0 4px;
+}
+
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .column {
+    -ms-flex: 50%;
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+}
