--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@
 	height:38%;
 	padding-top:80px;
 	color:white;
-	margin-top:70px;
 	margin-bottom:50px;
 	background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('img/uo_campus.png');
 	background-repeat: no-repeat;
 	background-size:100%;
+
 }
 
 
@@ -110,7 +110,7 @@ header #titre{
 }
 
 header #titre h1{
-	margin:0;
+	margin:0px;
 }
 
 header nav{
